@@ -74,6 +74,8 @@ $wgAutoloadLocalClasses = array(
 	'ExternalStoreDB' => 'includes/ExternalStoreDB.php',
 	'ExternalStoreHttp' => 'includes/ExternalStoreHttp.php',
 	'ExternalStore' => 'includes/ExternalStore.php',
+	'ExternalUser' => 'includes/ExternalUser.php',
+	'ExternalUser_vB' => 'includes/extauth/vB.php',
 	'FatalError' => 'includes/Exception.php',
 	'FakeTitle' => 'includes/FakeTitle.php',
 	'FauxRequest' => 'includes/WebRequest.php',
